--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -53,7 +53,7 @@
             <div class="input-group">
                 <div class="input-group-prepend">
                   <div class="input-group-text  rounded-1 d-flex gap-2">
-                  <input type="radio" name="datefil" value="alltime" aria-label="Radio button for following text input"> <label>label</label>
+                  <input type="radio" name="datefil" value="alltime" aria-label="Radio button for following text input" checked> <label>label</label>
                   <input type="radio" name="datefil" value="today" aria-label="Radio button for following text input"> Today
                   <input type="radio" name="datefil" value="15d"data-odaria-label="Radio button for following text input"> 15D
                   <input type="radio" name="datefil" value="30d"data-odaria-label="Radio button for following text input"> 30D
