--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -13,6 +13,12 @@ body{
     color: #67668A; 
     letter-spacing: .01rem;
 }
+main{
+   
+}
+a{
+    color: #656488;
+}
 .nav-link{
     color:#656488;
 }
@@ -29,6 +35,35 @@ h1{
 p{
     font-size: 14px;
 }
+p.error{
+    margin: 0;
+}
+
+/* modal */
+.modalSpan{
+    font-size: 35px;
+}
+
+.modal button.close{
+    border: 0;
+    width: 35px;
+    background-color: #FFFEFE;
+}
+
+input, .form-control, input:focus, .form-control:focus{
+    outline-color: #656488;
+    color: #656488;
+}
+.btn-primary{
+    background-color: #656488;
+    color: #FFFEFE;
+    border: 1px solid #656488;
+}
+.btn-primary:hover, .btn-primary:active:hover, .btn-primary:active:focus{
+    background-color: #424158;
+    border: 1px solid #424158;
+}
+
 
 .container{
     background-color: #F8F8F8;
@@ -95,7 +130,6 @@ p{
     color:#656488;
     font-size: .8rem;
 }
-
 .statusContainer{
     display: flex;
     width: auto;
@@ -111,13 +145,73 @@ p{
     cursor:default;
 }
 
+.sideContainer{
+    background-color: #F8F8F8;
+    border: 1px solid #DDDDDD;
+    padding: 0;
+    width: 40%;
+    display: flex;
+}
+.sideContainer div{
+    width: 100%;
+    height: 100%;
+}
+.sideContainer form h1{
+    margin: 20px 0 20px 20px;
+}
+.sideContainer input, .sideContainer textarea{
+    border-radius: 0;
+}
+.sideContainer a{
+    padding: .25em .5em;
+}
+.sideContainer select{
+    padding: .375em .6em;
+    margin: 0;
+    border-right: 0;
+    border-left: 0;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+}
+.sideContainer input, .sideContainer select, textarea{
+    outline-color: #656488;
+}
+
+.sideContainer select:selection{
+    border: 1px solid #656488;
+}
+input[type='date'].sideContainerDate{
+    padding: .375rem .75rem;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    border-right: 0;
+    border-left: 0;
+    width: 100%;
+}
+button.sideContainerButton{
+    background-color: #656488;
+    color: #FFFEFE;
+    width: 100%;
+    height: 50px;
+    margin: 20px 0;
+    border-radius: 0;
+}
+button.sideContainerButton:hover{
+    background-color: #424158;
+}
 
 input[type='date']{
     padding: .4em .5em;
     border: 1px solid #DDDDDD;
     width: 200px;
 }
+
+
 input[type='radio']{
     padding: .5em .5em;
     border: 1px solid #DDDDDD;
 }
+input[type='radio']:checked{
+    color: #656488;
+}
+
