--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -58,38 +58,42 @@
             </div>
         </div>
     </div>
-
-    <div class="d-flex overflow-auto  table-container" style="margin-top: 25px !important; width: auto"> 
+    <div class="d-flex filterContainer rounded-1 gap-3">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal" onclick="modal('empAddNew')">Add new</button>
+    </div>
+    <%-include('partials/Modal') %> 
     
-    <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
-    <thead>
-        <tr>
-            <th>Employee ID</th>
-            <th>Employee</th>
-            <th>Project</th>
-            <th>Designation</th>
-            <th>Type</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% Object.values(data.result).forEach(user =>{%> 
-            <tr>
-                <td><%=user.emp_code%></td>
-                <td><%=user.name%></td>
-                <td><%=user.employeeProject%></td>
-                <td><%=user.position%></td>
-                <td><%=user.employeeType%></td>
-                <td>
-                    <a href="#"> View Details </a>
-                </td>
-            </tr>
-        <%}); %>
-    </tbody>
-    <tfoot>
-    </tfoot>
-</table>
-</div>
+    <div class="d-flex overflow-auto  table-container" style="margin-top: 25px !important; min-width:1200px"> 
+    
+        <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+            <thead>
+                <tr>
+                    <th>Employee ID</th>
+                    <th>Employee</th>
+                    <th>Project</th>
+                    <th>Designation</th>
+                    <th>Type</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% Object.values(data.result).forEach(user =>{%> 
+                    <tr>
+                        <td><%=user.emp_code%></td>
+                        <td><%=user.name%></td>
+                        <td><%=user.employeeProject%></td>
+                        <td><%=user.position%></td>
+                        <td><%=user.employeeType%></td>
+                        <td>
+                            <a href="#"> View Details </a>
+                        </td>
+                    </tr>
+                <%}); %>
+            </tbody>
+            <tfoot>
+            </tfoot>
+        </table>
+    </div>
     
 </div>
 
@@ -98,15 +102,13 @@
 </main>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-
-<script>
-$(document).ready(function () {
-$('#mainTable').DataTable();
-});
-</script>
 
 <%-include('partials/Footer')%>
+
+
+<script>
+    //datatable
+    $(document).ready(function () {
+    $('#mainTable').DataTable();
+    });
+</script>
