--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -4,7 +4,7 @@
     input {text-align:center; }
     .form-control, .btn {border-radius: 0px;font-size: 14px; border-left: 0px; border-right: 0px;}
     
-    .btn{ padding: 15px 0px 15px 0px;  border-color: #67668A;}
+    .btn{ padding: 15px 0px 15px 0px;  border-color: #67668A; height: 50px;}
     .btn-primary:hover{ background: #424158;}
     .btn-primary:active{ background: #424158;}
 </style>
@@ -34,7 +34,6 @@
     </div>
 
 </div>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-<script src="/scripts/login.js"></script>
+
 <%-include('partials/Footer')%>
+<script src="/scripts/login.js"></script>
