--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -29,8 +29,8 @@
     <div class="d-flex gap-4" style="padding-top: 25px !important;"> 
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
-              <p>Earnings</p>
-              <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_earnings%></b></p>
+              <p>Monthly Salary</p>
+              <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_morate%></b></p>
            </div>
            <div class="d-flex">
               <p></p>
@@ -39,8 +39,38 @@
       </div>
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
-              <p>Deduction</p>
-              <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_deductions%></b></p>
+              <p>Semi-Monthly Salary</p>
+              <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_semimorate%></b></p>
+           </div>
+           <div class="d-flex">
+              <p></p>
+              <p class="mt-auto p-2 bd-highlight">Totals</p>
+           </div>
+      </div>
+      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+        <div class="d-flex flex-column justify-content-around">
+           <p>Deduction</p>
+           <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_deductions%></b></p>
+        </div>
+        <div class="d-flex">
+           <p></p>
+           <p class="mt-auto p-2 bd-highlight">Totals</p>
+        </div>
+   </div>
+      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+           <div class="d-flex flex-column justify-content-around">
+              <p>Gross Pay</p>
+              <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_grosspay%></b></p>
+           </div>
+           <div class="d-flex">
+              <p></p>
+              <p class="mt-auto p-2 bd-highlight">Totals</p>
+           </div>
+      </div>
+      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+           <div class="d-flex flex-column justify-content-around">
+              <p>Net Pay</p>
+              <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_netpay%></b></p>
            </div>
            <div class="d-flex">
               <p></p>
@@ -67,7 +97,7 @@
         </form>
     </div>
 
-    <div class="d-flex overflow-auto  table-container" style="margin-top: 25px !important; width: auto"> 
+    <div class="d-flex overflow-auto  table-container" style="margin-top: 25px !important; min-width:1200px;"> 
     
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
@@ -126,16 +156,5 @@
 
 </main>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-
-<script>
-$(document).ready(function () {
-$('#mainTable').DataTable();
-});
-</script>
-
 <%-include('partials/Footer')%>
+<script type="text/javascript" src="/script/scripts.js"></script>
