--- a/views/holidays.ejs
+++ b/views/holidays.ejs
@@ -1,103 +1,9 @@
 <%-include('partials/Header')%>
+<link rel="stylesheet" href="/styles/dataTable.css">
+<main class="d-flex flex-nowrap" style=" height: 100vh; align-self: center;">
 <style>
-    @import url('https://fonts.googleapis.com/css?family=Barlow&display=swap');
-
-    *{font-family: 'Barlow', sans-serif;  color: #67668A !important; }
-    body{
-        font-size: 14px;
-    }
-    .active{
-        border-radius: 0 !important;
-        background: #67668A !important;
-        color: white !important;
-    }
-    .dataTables_wrapper{
-        font-family: 'Barlow', sans-serif;
-        background-color: #F8F8F8;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button.current{
-      background: #67668A !important;
-      color: white !important;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button:hover{
-      background: #67668A !important;
-      color: white !important;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active{
-      background: none !important;
-      color: #67668A !important;
-    }
-    tbody, td, tfoot, th, thead, tr {
-    border: 0;
-    }
-    table.dataTable{
-        border-collapse: collapse;
-    }
-    
-    table.dataTable thead tr{
-        vertical-align:middle;
-    }
-    table.dataTable thead th, table.dataTable thead td {text-align: center;}
-    table.dataTable thead th, table.dataTable thead td {
-        border:0;
-    }   
-    table.dataTable thead th, table.dataTable thead td {
-        
-        height: 5px;
-    }   
-    table.dataTable.no-footer {
-        border-bottom: 1px solid #dddddd;
-    }
-    table.dataTable tbody td {
-        vertical-align: middle;
-        border: 1px solid #dddddd;
-        background-color: #FFFEFE;
-        word-wrap: break-word;         /* All browsers since IE 5.5+ */
-        overflow-wrap: break-word;
-        
-    }
-    table.dataTable tbody td:first-child {
-        border-left: 0;
-    }
-    table.dataTable tbody td:last-child {
-        border-right: 0;
-    }
-    
-    th:first-child {
-      border-left: 1px solid #dddddd;
-    }
-    #payroll_wrapper{
-        padding: 1em 0;
-        border: 1px solid #dddddd;
-        border-radius: 0.25rem;
-        width: 100%;
-    }
-    #payroll_length, #payroll_info{
-        margin-left: 15px;
-    }
-    #payroll_filter, #payroll_paginate{
-        margin-right: 15px;
-    }
-
-    #payroll_legth, #payroll_filter{
-        margin-bottom: 15px;
-    }
-
-    #payroll_info, #payroll_paginate{
-        margin-top: 15px;
-    }
-
-    .table-striped>tbody>tr:nth-of-type(odd)>* {
-    --bs-table-accent-bg: #FFFEFE;
-    color: var(--bs-table-striped-color);
-    }
-    p
-    /* table.dataTable thead tr th{
-        border: 1px solid #dddddd;
-    } */
+    .form-control, .btn {font-size: 14px; border-left: 0px; border-right: 0px;}
 </style>
-<main class="d-flex flex-nowrap" style=" height: 100vh; overflow: hidden; align-self: center;">
-
     <%-include('partials/Aside')%> 
 <div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em">
     <div class="d-flex justify-content-between"> 
@@ -122,7 +28,7 @@
             </div>
     </div>
 
-    <div class="d-flex gap-4" style="padding-top: 25px !important;"> 
+    <div class="d-flex gap-4 mr-4" style="padding-top: 25px !important;"> 
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Total Holidays</p>
@@ -144,22 +50,138 @@
            </div>
       </div>
     </div>
+
+    <!-- modal -->
+    <%-include('partials/Modal') %> 
+    <div class="d-flex overflow-auto gap-4 justify-content-between" style="margin-top: 25px !important; min-width:1200px">
+
+        <div class="overflow-auto  table-container" style="width:100%;  "> 
+        
+            <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+                <thead>
+                    <tr>
+                        <th>Holiday Name</th>
+                        <th>Description</th>
+                        <th>Pre-requisite date</th>
+                        <th>Requisite date</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% Object.values(data.result).forEach(holiday =>{%> 
+                        <tr>
+                            <td><%=holiday.name%></td>
+                            <td><%=holiday.description%></td>
+                            <td><%=moment(holiday.preDate).format('LL')%></td>
+                            <td><%=moment(holiday.date).format('LL')%></td>
+                            <td>
+                                <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('edit')"> Edit </a>
+                                <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('delete')"> Delete </a>
+                            </td>
+                        </tr>
+                    <%}); %>
+                    <tr>
+                        <td>Christmas</td>
+                        <td>Christmas 2022</td>
+                        <td>December 24, 2022</td>
+                        <td>December 25, 2022</td>
+                        <td>
+                            <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('edit')"> Edit </a>
+                            <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('delete')"> Delete </a>
+                        </td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                </tfoot>
+            </table>
+        </div>
+        <div class="sideContainer rounded-1">
+            <div class="overflow-auto" > 
+                <form action="" class="d-flex flex-column gap-2">
+                    <h1>Add Holiday</h1>
+                    <div class="mb-0">
+                        <input required type="text" class="form-control" name='name' placeholder="Holiday Name">
+                        <p class="text-center text-danger fname-error error"></p>
+                    </div>
+                    
+                    <div class="mb-0">
+                        <textarea class="form-control" name='description' placeholder="Description"></textarea>
+                        <p class="text-center text-danger description-error error"></p>
+                    </div>
+                    <div class="mb-0">
+                        <input required type="date" placeholder="Pre-requisite date" name="predate" value="" id="" class="sideContainerDate">
+                        <p class="text-center text-danger from-error error"></p>
+                    </div>
+                    <div class="mb-0">
+                        <input required type="date" placeholder="Requisite date" name="date" value="" id="" class=" sideContainerDate">
+                        <p class="text-center text-danger to-error error"></p>
+                    </div>
+                    <button type="submit" class="btn btn-primary sideContainerButton">Add New</button>
+                </form>
+            </div>
+        </div>
+        
+    </div>
+    
 </div>
 
 
 
 </main>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-
-<script>
-$(document).ready(function () {
-$('#payroll').DataTable();
-});
-</script>
-
 <%-include('partials/Footer')%>
+<script>
+    $(document).ready(function () {
+    
+    $('#mainTable').DataTable({
+        "columnDefs": [
+         //date-fields
+         {
+            "orderable": true,
+            "targets": [2, 3],
+            "type": 'date'
+         },
+         {"className": "dt-center", "targets": "_all"}
+        ]
+        });
+    });
+
+    const form = document.querySelector('form')
+    form.addEventListener('submit', async (e)=>{
+        e.preventDefault()
+        try{
+            const fnameErr = document.querySelector('p.fname-error')
+            const preDateErr = document.querySelector('p.from-error')
+            const dateErr = document.querySelector('p.to-error')
+
+            const name = form.name.value
+            const description = form.description.value
+            const predate = form.predate.value
+            const date = form.date.value
+
+            const res = await fetch('http://localhost:3000/admin/api/events/holiday', {
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    name,
+                    description,
+                    predate,
+                    date
+                }),
+                method: 'POST'
+            })
+            const data = await res.json()
+            console.log('asdas', data)
+            if(data.err) {
+                fnameErr.textContent = data.err.name
+                preDateErr.textContent = data.err.preDate
+                dateErr.textContent = data.err.date
+            }
+
+            if(data){
+                
+            }
+        }catch(e){
+            console.log('fe[holidays]:', e)
+        }
+    })
+</script>
