--- a/views/travelPass.ejs
+++ b/views/travelPass.ejs
@@ -1,100 +1,7 @@
 <%-include('partials/Header')%>
+<link rel="stylesheet" href="/styles/dataTable.css">
 <style>
-    @import url('https://fonts.googleapis.com/css?family=Barlow&display=swap');
-
-    *{font-family: 'Barlow', sans-serif;  color: #67668A !important; }
-    body{
-        font-size: 14px;
-    }
-    .active{
-        border-radius: 0 !important;
-        background: #67668A !important;
-        color: white !important;
-    }
-    .dataTables_wrapper{
-        font-family: 'Barlow', sans-serif;
-        background-color: #F8F8F8;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button.current{
-      background: #67668A !important;
-      color: white !important;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button:hover{
-      background: #67668A !important;
-      color: white !important;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active{
-      background: none !important;
-      color: #67668A !important;
-    }
-    tbody, td, tfoot, th, thead, tr {
-    border: 0;
-    }
-    table.dataTable{
-        border-collapse: collapse;
-    }
-    
-    table.dataTable thead tr{
-        vertical-align:middle;
-    }
-    table.dataTable thead th, table.dataTable thead td {text-align: center;}
-    table.dataTable thead th, table.dataTable thead td {
-        border:0;
-    }   
-    table.dataTable thead th, table.dataTable thead td {
-        
-        height: 5px;
-    }   
-    table.dataTable.no-footer {
-        border-bottom: 1px solid #dddddd;
-    }
-    table.dataTable tbody td {
-        vertical-align: middle;
-        border: 1px solid #dddddd;
-        background-color: #FFFEFE;
-        word-wrap: break-word;         /* All browsers since IE 5.5+ */
-        overflow-wrap: break-word;
-        
-    }
-    table.dataTable tbody td:first-child {
-        border-left: 0;
-    }
-    table.dataTable tbody td:last-child {
-        border-right: 0;
-    }
-    
-    th:first-child {
-      border-left: 1px solid #dddddd;
-    }
-    #payroll_wrapper{
-        padding: 1em 0;
-        border: 1px solid #dddddd;
-        border-radius: 0.25rem;
-        width: 100%;
-    }
-    #payroll_length, #payroll_info{
-        margin-left: 15px;
-    }
-    #payroll_filter, #payroll_paginate{
-        margin-right: 15px;
-    }
-
-    #payroll_legth, #payroll_filter{
-        margin-bottom: 15px;
-    }
-
-    #payroll_info, #payroll_paginate{
-        margin-top: 15px;
-    }
-
-    .table-striped>tbody>tr:nth-of-type(odd)>* {
-    --bs-table-accent-bg: #FFFEFE;
-    color: var(--bs-table-striped-color);
-    }
-    p
-    /* table.dataTable thead tr th{
-        border: 1px solid #dddddd;
-    } */
+    .form-control, .btn {font-size: 14px; border-left: 0px; border-right: 0px;}
 </style>
 <main class="d-flex flex-nowrap" style=" height: 100vh; overflow: hidden; align-self: center;">
 
@@ -125,7 +32,7 @@
     <div class="d-flex gap-4" style="padding-top: 25px !important;"> 
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
-              <p>Total Pass</p>
+              <p>Passes</p>
               <p style="font-size:1.5rem;"><b>30</b></p>
            </div>
            <div class="d-flex">
@@ -135,7 +42,7 @@
       </div>
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
-              <p>Upcoming Pass</p>
+              <p>Upcoming Passes</p>
               <p style="font-size:1.5rem;"><b>30</b></p>
            </div>
            <div class="d-flex">
@@ -144,22 +51,182 @@
            </div>
       </div>
     </div>
+    <%-include('partials/Modal') %> 
+    <div id='dataTableParent'class="d-flex overflow-auto gap-4 justify-content-between" style="margin-top: 25px !important; min-width:1200px">
+
+        <div class="overflow-auto  table-container" style="width:100%;  "> 
+        
+            <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+                <thead>
+                    <tr>
+                        <th>Employee</th>
+                        <th>Type of</th>
+                        <th>From</th>
+                        <th>To</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                    <tr>
+                        <td>Ken Gervacio</td>
+                        <td>Official Business</td>
+                        <td>December 24, 2022</td>
+                        <td>December 25, 2022</td>
+                        <td>
+                            <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('edit')"> Edit </a>
+                            <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('delete')"> Delete </a>
+                        </td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                </tfoot>
+            </table>
+        </div>
+        <div class="sideContainer rounded-1">
+            <div class="overflow-auto" > 
+                <form action="" class="d-flex flex-column gap-2">
+                    <h1>Add Travel Pass</h1>
+                    <div class="mb-0 d-flex flex-column">
+                        <input  type="text" class="form-control" name='id' placeholder="Employee ID *" id='idNo' >
+                        <a href="#" id="idNoFind" onclick="doneTyping()" style="align-self:flex-end;">Find</a>
+                        <p class="text-center text-danger id-error error"></p>
+                    </div>
+                    
+                    <div class="mb-0">
+                        <input  type="text" class="form-control" name='name' placeholder="Employee Name *" id='empName'>
+                        <p class="text-center text-danger description-error error"></p>
+                    </div>
+                    <select class="custom-select" name="project" id="projectSelect">
+                        <option >Project Type</option>
+                        <option value="Project One" selected>Project One</option>
+                        <option value="Project Two">Project Two</option>
+                    </select>
+                    <div class="mb-0">
+                        <input  type="date" name="fromDate" value="" id="" class="sideContainerDate">
+                        <p class="text-center text-danger from-error error"></p>
+                    </div>
+                    <div class="mb-0">
+                        <input  type="date" name="toDate" value="" id="" class=" sideContainerDate">
+                        <p class="text-center text-danger to-error error"></p>
+                    </div>
+                    <button type="submit" class="btn btn-primary sideContainerButton">Add New</button>
+                </form>
+            </div>
+        </div>
+        
+    </div>
 </div>
 
 
 
 </main>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-
-<script>
-$(document).ready(function () {
-$('#payroll').DataTable();
-});
-</script>
-
 <%-include('partials/Footer')%>
+<script>
+    $(document).ready(function () {
+    
+    $('#mainTable').DataTable({
+        "columnDefs": [
+         //date-fields
+         {
+            "orderable": true,
+            "targets": [2, 3],
+            "type": 'date'
+         },
+         {"className": "dt-center", "targets": "_all"}
+        ]
+        });
+    });
+    const idErr = document.querySelector('p.id-error')
+    const fnameErr = document.querySelector('p.fname-error')
+    const preDateErr = document.querySelector('p.from-error')
+    const dateErr = document.querySelector('p.to-error')
+
+    const idInput = document.querySelector('#idNo')
+    const fNameInput = document.querySelector('#empName')
+
+    const doneTyping = async()=>{
+        let id = idInput.value
+        if(!id){
+            idErr.textContent = 'Input must not be empty'
+        }
+        if(id){
+            if(!isNaN(id)){
+                const result = await fetch(`http://localhost:3000/admin/api/employees/${id}`)
+                const data = await result.json()
+                console.log(data)
+                if(data){
+                    idErr.textContent = data.err
+                    fNameInput.value = data.name
+                }
+                if(data.err){
+                    idErr.textContent = data.err
+                }
+            }else{
+                idErr.textContent = 'Input must be a number'
+            }
+        }
+    }
+    const form = document.querySelector('form')
+    form.addEventListener('submit', async (e)=>{
+        e.preventDefault()
+        try{
+            const doc = {
+                emp_code: form.id.value,
+                name : form.name.value,
+                fromDate : form.fromDate.value,
+                toDate : form.toDate.value,
+                project: form.project.value
+            }
+            console.log('client 1:', doc)
+            const res = await fetch('http://localhost:3000/admin/api/events/travelpass',{
+                headers:{'Content-Type': 'application/json'},
+                body: JSON.stringify(doc),
+                method: 'POST'
+            })
+    
+            const data = await res.json()
+            
+            if(data) {
+                // location.href = 'http://localhost:3000/admin/travelpass'
+                console.log('response:', data)
+            }
+            if(data.err) {
+                console.log(data.err)
+                // idErr.textContent = data.err.emp_code
+                // fnameErr.textContent = data.err.name
+                // preDateErr.textContent = data.err.preDate
+                // dateErr.textContent = data.err.date
+            }
+            // const name = form.name.value
+            // const description = form.description.value
+            // const predate = form.predate.value
+            // const date = form.date.value
+
+            // const res = await fetch('http://localhost:3000/admin/api/events/holiday', {
+            //     headers: { 'Content-Type': 'application/json' },
+            //     body: JSON.stringify({
+            //         name,
+            //         description,
+            //         predate,
+            //         date
+            //     }),
+            //     method: 'POST'
+            // })
+            // const data = await res.json()
+            // console.log('asdas', data)
+            // if(data.err) {
+            //     fnameErr.textContent = data.err.name
+            //     preDateErr.textContent = data.err.preDate
+            //     dateErr.textContent = data.err.date
+            // }
+
+            // if(data){
+                
+            // }
+        }catch(e){
+            console.log('fe[holidays]:', e)
+        }
+    })
+</script>
