update: deductions and modal

--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -59,7 +59,7 @@
         </div>
     </div>
     <div class="d-flex filterContainer rounded-1 gap-3">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal" onclick="modal('empAddNew')">Add new</button>
+        <button id="btnAdd" type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal" onclick="modal('empAddNew')">Add new</button>
     </div>
     <%-include('partials/Modal') %> 
     
