--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -21,7 +21,7 @@
       </li>
       <li>
         <a href="/admin/attendance" class="nav-link <%=(url==='/attendance')?'active':''%>">
-          Attendace Report
+          Attendance Report
         </a>
       </li>
       <li class="nav-item">
