--- a/views/deductions.ejs
+++ b/views/deductions.ejs
@@ -1,100 +1,7 @@
 <%-include('partials/Header')%>
+<link rel="stylesheet" href="/styles/dataTable.css">
 <style>
-    @import url('https://fonts.googleapis.com/css?family=Barlow&display=swap');
-
-    *{font-family: 'Barlow', sans-serif;  color: #67668A !important; }
-    body{
-        font-size: 14px;
-    }
-    .active{
-        border-radius: 0 !important;
-        background: #67668A !important;
-        color: white !important;
-    }
-    .dataTables_wrapper{
-        font-family: 'Barlow', sans-serif;
-        background-color: #F8F8F8;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button.current{
-      background: #67668A !important;
-      color: white !important;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button:hover{
-      background: #67668A !important;
-      color: white !important;
-    }
-    .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active{
-      background: none !important;
-      color: #67668A !important;
-    }
-    tbody, td, tfoot, th, thead, tr {
-    border: 0;
-    }
-    table.dataTable{
-        border-collapse: collapse;
-    }
-    
-    table.dataTable thead tr{
-        vertical-align:middle;
-    }
-    table.dataTable thead th, table.dataTable thead td {text-align: center;}
-    table.dataTable thead th, table.dataTable thead td {
-        border:0;
-    }   
-    table.dataTable thead th, table.dataTable thead td {
-        
-        height: 5px;
-    }   
-    table.dataTable.no-footer {
-        border-bottom: 1px solid #dddddd;
-    }
-    table.dataTable tbody td {
-        vertical-align: middle;
-        border: 1px solid #dddddd;
-        background-color: #FFFEFE;
-        word-wrap: break-word;         /* All browsers since IE 5.5+ */
-        overflow-wrap: break-word;
-        
-    }
-    table.dataTable tbody td:first-child {
-        border-left: 0;
-    }
-    table.dataTable tbody td:last-child {
-        border-right: 0;
-    }
-    
-    th:first-child {
-      border-left: 1px solid #dddddd;
-    }
-    #payroll_wrapper{
-        padding: 1em 0;
-        border: 1px solid #dddddd;
-        border-radius: 0.25rem;
-        width: 100%;
-    }
-    #payroll_length, #payroll_info{
-        margin-left: 15px;
-    }
-    #payroll_filter, #payroll_paginate{
-        margin-right: 15px;
-    }
-
-    #payroll_legth, #payroll_filter{
-        margin-bottom: 15px;
-    }
-
-    #payroll_info, #payroll_paginate{
-        margin-top: 15px;
-    }
-
-    .table-striped>tbody>tr:nth-of-type(odd)>* {
-    --bs-table-accent-bg: #FFFEFE;
-    color: var(--bs-table-striped-color);
-    }
-    p
-    /* table.dataTable thead tr th{
-        border: 1px solid #dddddd;
-    } */
+    .form-control, .btn {font-size: 14px; border-left: 0px; border-right: 0px;}
 </style>
 <main class="d-flex flex-nowrap" style=" height: 100vh; overflow: hidden; align-self: center;">
 
@@ -125,7 +32,7 @@
     <div class="d-flex gap-4" style="padding-top: 25px !important;"> 
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
-              <p>Total Deductions</p>
+              <p>Deductions</p>
               <p style="font-size:1.5rem;"><b>30</b></p>
            </div>
            <div class="d-flex">
@@ -133,7 +40,64 @@
               <p class="mt-auto p-2 bd-highlight">Totals</p>
            </div>
       </div>
-      
+      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+        <div class="d-flex flex-column justify-content-around">
+           <p>Amount</p>
+           <p style="font-size:1.5rem;"><b>P30</b></p>
+        </div>
+        <div class="d-flex">
+           <p></p>
+           <p class="mt-auto p-2 bd-highlight">Totals</p>
+        </div>
+   </div>
+    </div>
+    <%-include('partials/Modal') %> 
+    <div id='dataTableParent'class="d-flex overflow-auto gap-4 justify-content-between" style="margin-top: 25px !important; min-width:1200px">
+
+        <div class="overflow-auto  table-container" style="width:100%;  "> 
+        
+            <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+                <thead>
+                    <tr>
+                        <th>Deduction</th>
+                        <th>Amount</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% Object.values(data.result).forEach(deduction =>{%> 
+                        <tr>
+                            <td><%=deduction.name%></td>
+                            <td>P<%=deduction.amount%></td>
+                            <td>
+                                <a id="aEdit" href="#" data-toggle="modal" data-target="#modal"  onclick="modal('edit', '<%=deduction._id%>')"> Edit </a>
+                                <a id="aDelete" href="#" data-toggle="modal" data-target="#modal"  onclick="modal('delete', '<%=deduction._id%>')"> Delete </a>
+                            </td>
+                        </tr>
+                    <%}); %>
+                </tbody>
+                <tfoot>
+                </tfoot>
+            </table>
+        </div>
+        <div class="sideContainer rounded-1">
+            <div class="overflow-auto" > 
+                <form action="" class="d-flex flex-column gap-2">
+                    <h1>Add Deductions</h1>
+                    <div class="mb-0">
+                        <input  type="text" class="form-control" name='name' placeholder="Deduction Name *" id='deducName'>
+                        <p class="text-center text-danger name-error error"></p>
+                    </div>
+                   
+                    <div class="mb-0">
+                        <input  type="number" name="amount" placeholder="Amount *" class="form-control">
+                        <p class="text-center text-danger num-error error"></p>
+                    </div>
+                    <button type="submit" class="btn btn-primary sideContainerButton">Add New</button>
+                </form>
+            </div>
+        </div>
+        
     </div>
 </div>
 
@@ -141,16 +105,42 @@
 
 </main>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-
+<%-include('partials/Footer')%>
 <script>
 $(document).ready(function () {
-$('#payroll').DataTable();
+    
+    $('#mainTable').DataTable({
+        "columnDefs": [
+         {"className": "dt-center", "targets": "_all"}
+        ]
+    });
 });
-</script>
+const nameErr = document.querySelector('p.name-error')
+const numErr = document.querySelector('p.num-error')
+const form = document.querySelector('form')
+form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const doc = {
+        
+        name : form.name.value,
+        amount : form.amount.value,
+    }
+    console.log('client 1:', doc)
+    const res = await fetch('http://localhost:3000/admin/api/deductions',{
+        headers:{'Content-Type': 'application/json'},
+        body: JSON.stringify(doc),
+        method: 'POST'
+    })
+    
+    const data = await res.json()
+    
+    if(data) console.log('response:', data)
+    if(data.err) {
+        console.log(data.err)
+        // fnameErr.textContent = data.err.name
+        // preDateErr.textContent = data.err.preDate
+        // dateErr.textContent = data.err.date
+    }
+    })
 
-<%-include('partials/Footer')%>
+</script>
