--- a/views/holidays.ejs
+++ b/views/holidays.ejs
@@ -75,21 +75,11 @@
                             <td><%=moment(holiday.preDate).format('LL')%></td>
                             <td><%=moment(holiday.date).format('LL')%></td>
                             <td>
-                                <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('edit')"> Edit </a>
-                                <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('delete')"> Delete </a>
+                                <a id="aEdit" href="#" data-toggle="modal" data-target="#modal" onclick="modal('edit', '<%=holiday._id%>')"> Edit </a>
+                                <a id="aDelete" href="#" data-toggle="modal" data-target="#modal" onclick="modal('delete', '<%=holiday._id%>')"> Delete </a>
                             </td>
                         </tr>
                     <%}); %>
-                    <tr>
-                        <td>Christmas</td>
-                        <td>Christmas 2022</td>
-                        <td>December 24, 2022</td>
-                        <td>December 25, 2022</td>
-                        <td>
-                            <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('edit')"> Edit </a>
-                            <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('delete')"> Delete </a>
-                        </td>
-                    </tr>
                 </tbody>
                 <tfoot>
                 </tfoot>
@@ -97,7 +87,7 @@
         </div>
         <div class="sideContainer rounded-1">
             <div class="overflow-auto" > 
-                <form action="" class="d-flex flex-column gap-2">
+                <form action="" id="asideForm" class="d-flex flex-column gap-2">
                     <h1>Add Holiday</h1>
                     <div class="mb-0">
                         <input required type="text" class="form-control" name='name' placeholder="Holiday Name">
@@ -146,7 +136,7 @@
         });
     });
 
-    const form = document.querySelector('form')
+    const form = document.querySelector('form#asideForm')
     form.addEventListener('submit', async (e)=>{
         e.preventDefault()
         try{
@@ -159,7 +149,7 @@
             const predate = form.predate.value
             const date = form.date.value
 
-            const res = await fetch('http://localhost:3000/admin/api/events/holiday', {
+            const res = await fetch('http://localhost:3000/admin/api/events/holidays', {
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({
                     name,
