--- a/views/partials/Modal.ejs
+++ b/views/partials/Modal.ejs
@@ -1,20 +1,24 @@
+<style>
+</style>
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
-        <div class="modal-header">
-            <h5 class="modal-title" id="modalTitle">Add Employee</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true" class="modalSpan">&times;</span>
-            </button>
-        </div>
-        <div class="modal-body">
-            form goes here
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-        </div>
+        <form action="" id="modalForm">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalTitle">Add Employee</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true" class="modalSpan">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <label for="" id="bodyMessage">asdas</label>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary" id="mainButton">Save changes</button>
+            </div>
+            </div>
+        </form>
     </div>
 </div>
 <script type="text/javascript" src="/script/modal.js"></script>
