--- a/views/travelPass.ejs
+++ b/views/travelPass.ejs
@@ -59,6 +59,7 @@
             <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
                 <thead>
                     <tr>
+                        <th>Employee ID</th>
                         <th>Employee</th>
                         <th>Type of</th>
                         <th>From</th>
@@ -67,17 +68,20 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <% Object.values(data.result).forEach(pass =>{%> 
+                        <tr>
+                            <td><%=pass.emp_code%></td>
+                            <td><%=pass.name%></td>
+                            <td><%=pass.project%></td>
+                            <td><%=moment(pass.from_date).format('LL')%></td>
+                            <td><%=moment(pass.to_date).format('LL')%></td>
+                            <td>
+                                <a id='aEdit'href="#" data-toggle="modal" data-target="#modal" onclick="modal('edit', '<%=pass._id%>')"> Edit </a>
+                                <a id='aDelete' href="#" data-toggle="modal" data-target="#modal"  onclick="modal('delete', '<%=pass._id%>')"> Delete </a>
+                            </td>
+                        </tr>
+                    <%}); %>
                     
-                    <tr>
-                        <td>Ken Gervacio</td>
-                        <td>Official Business</td>
-                        <td>December 24, 2022</td>
-                        <td>December 25, 2022</td>
-                        <td>
-                            <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('edit')"> Edit </a>
-                            <a href="#" data-toggle="modal" data-target="#modal" onclick="modal('delete')"> Delete </a>
-                        </td>
-                    </tr>
                 </tbody>
                 <tfoot>
                 </tfoot>
@@ -85,7 +89,7 @@
         </div>
         <div class="sideContainer rounded-1">
             <div class="overflow-auto" > 
-                <form action="" class="d-flex flex-column gap-2">
+                <form id="asideForm" action="" class="d-flex flex-column gap-2">
                     <h1>Add Travel Pass</h1>
                     <div class="mb-0 d-flex flex-column">
                         <input  type="text" class="form-control" name='id' placeholder="Employee ID *" id='idNo' >
@@ -168,7 +172,7 @@
             }
         }
     }
-    const form = document.querySelector('form')
+    const form = document.querySelector('form#asideForm')
     form.addEventListener('submit', async (e)=>{
         e.preventDefault()
         try{
