-fix: bug fixings

--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -17,7 +17,7 @@
             <img src="/img/bfar-logo.png" class="img-fluid mx-auto" alt="..." style="max-width: 40%;">
             <h1 class="text-center" style="margin-bottom: 2em;">BFAR Management System</h1>
 
-            <div class="mb-0">
+            <div class="mb-0 mb-3">
                 <input type="text" class="form-control" name='email' id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email or Username">
                 <p class="text-center text-danger email-error error"></p>
             </div>
