--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -15,42 +15,42 @@
         </a>
       </li>
       <li>
-        <a href="/admin/employees" class="nav-link <%=(url==='/employees')?'active':''%>">
+        <a href="/admin/employees" class="nav-link <%=(url.includes('/employees'))?'active':''%>">
           Employees
         </a>
       </li>
       <li>
-        <a href="/admin/attendance" class="nav-link <%=(url==='/attendance')?'active':''%>">
+        <a href="/admin/attendance" class="nav-link <%=(url.includes('/attendance'))?'active':''%>">
           Attendance Report
         </a>
       </li>
       <li class="nav-item">
-        <a href="/admin/payroll" class="nav-link <%=(url==='/payroll')?'active':''%>" aria-current="page">
+        <a href="/admin/payroll" class="nav-link <%=(url.includes('/payroll'))?'active':''%>" aria-current="page">
           Payroll Report
         </a>
       </li>
       <li>
-        <a href="/admin/holidays" class="nav-link <%=(url==='/holidays')?'active':''%>">
+        <a href="/admin/holidays" class="nav-link <%=(url.includes('/holidays'))?'active':''%>">
           Holidays
         </a>
       </li>
       <li>
-        <a href="/admin/travelpass" class="nav-link <%=(url==='/travelpass')?'active':''%>">
+        <a href="/admin/travelpass" class="nav-link <%=(url.includes('/travelpass'))?'active':''%>">
           Travel Pass
         </a>
       </li>
       <li>
-        <a href="/admin/deductions" class="nav-link <%=(url==='/deductions')?'active':''%>">
+        <a href="/admin/deductions" class="nav-link <%=(url.includes('/deductions'))?'active':''%>">
           Deductions
         </a>
       </li>
       <li>
-        <a href="/admin/contributions" class="nav-link <%=(url==='/contributions')?'active':''%>">
+        <a href="/admin/contributions" class="nav-link <%=(url.includes('/contributions'))?'active':''%>">
           Contributions
         </a>
       </li>
       <li>
-        <a href="/admin/leave" class="nav-link <%=(url==='/leave')?'active':''%>">
+        <a href="/admin/leave" class="nav-link <%=(url.includes('/leave'))?'active':''%>">
           Leave
         </a>
       </li>
