--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -50,7 +50,7 @@
         <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
             <div class="d-flex flex-column justify-content-around">
                <p>Contractual/Job Orders</p>
-               <p style="font-size:1.5rem;"><b><%=data.data[0].contractual%></b></p>
+               <p style="font-size:1.5rem;"><b><%=(!data.data[0]) ? 0 :data.data[0].contractual%></b></p>
             </div>
             <div class="d-flex">
                <p></p>
