--- a/views/deductions.ejs
+++ b/views/deductions.ejs
@@ -82,7 +82,7 @@
         </div>
         <div class="sideContainer rounded-1">
             <div class="overflow-auto" > 
-                <form action="" class="d-flex flex-column gap-2">
+                <form action="" id='asideForm'class="d-flex flex-column gap-2">
                     <h1>Add Deductions</h1>
                     <div class="mb-0">
                         <input  type="text" class="form-control" name='name' placeholder="Deduction Name *" id='deducName'>
@@ -117,7 +117,7 @@ $(document).ready(function () {
 });
 const nameErr = document.querySelector('p.name-error')
 const numErr = document.querySelector('p.num-error')
-const form = document.querySelector('form')
+const form = document.querySelector('form#asideForm')
 form.addEventListener('submit', async (e) => {
     e.preventDefault();
     const doc = {
