fix: modals are tweaked for reusable purpose.

--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -68,7 +68,7 @@
                 <a href="#" class="nav-link" style="padding-right: 10px !important;">
                     <u> Account </u>
                 </a>
-                <a href="#" class="nav-link ">
+                <a href="/admin/logout" class="nav-link ">
                     <u> Log-out </u>
                 </a>
             </div>
