--- a/views/holidays.ejs
+++ b/views/holidays.ejs
@@ -75,8 +75,8 @@
                             <td><%=moment(holiday.preDate).format('LL')%></td>
                             <td><%=moment(holiday.date).format('LL')%></td>
                             <td>
-                                <a id="aEdit" href="#" data-toggle="modal" data-target="#modal" onclick="modal('edit', '<%=holiday._id%>')"> Edit </a>
-                                <a id="aDelete" href="#" data-toggle="modal" data-target="#modal" onclick="modal('delete', '<%=holiday._id%>')"> Delete </a>
+                                <a id="aEdit" href="#" data-toggle="modal" data-target="#modal" onclick=""> Edit </a>
+                                <a id="aDelete" href="#" data-toggle="modal" data-target="#modal" onclick="deleteModal('<%=holiday._id%>')"> Delete </a>
                             </td>
                         </tr>
                     <%}); %>
