--- a/views/partials/Modal.ejs
+++ b/views/partials/Modal.ejs
@@ -1,4 +1,19 @@
 <style>
+    .modal-body{
+        padding: 1.5em 0;
+        display: flex;
+        flex-direction: column;
+        gap:1em;
+        background-color: #F8F8F8;
+    }
+    label.deleteLbl{
+        text-align: center;
+        vertical-align: middle;
+
+    }
+    .modal-title{
+        padding: 0;
+    }
 </style>
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -11,7 +26,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <label for="" id="bodyMessage">asdas</label>
+                
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -21,4 +36,5 @@
         </form>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/ejs@3.1.3/ejs.min.js"></script>
 <script type="text/javascript" src="/script/modal.js"></script>
