update: holidays edit modal added

--- a/views/partials/bodies/Travelpass-editbody.ejs
+++ b/views/partials/bodies/Travelpass-editbody.ejs
@@ -23,14 +23,14 @@
     }
 </style>
     <div class="mb-0 d-flex flex-column">
-        <label for="id">Enter your ID:</label>
-        <input  type="text" class="form-control" name='id' placeholder="Employee ID *" id='idNo' value="<%=pass.emp_code%>">
+        <label for="id">ID:</label>
+        <input disabled type="text" class="form-control" name='id' placeholder="Employee ID *" id='idNo' value="<%=pass.emp_code%>">
         <p class="text-center text-danger id-error error"></p>
     </div>
 
     <div class="mb-0">
-        <label for="id">Enter your name:</label>
-        <input  type="text" class="form-control" name='name' placeholder="Employee Name *" id='empName' value="<%=pass.name%>">
+        <label for="id">Name:</label>
+        <input disabled type="text" class="form-control" name='name' placeholder="Employee Name *" id='empName' value="<%=pass.name%>">
         <p class="text-center text-danger name-error error"></p>
     </div>
     <div class="mb-0 d-flex flex-column">
