--- a/views/partials/Modal.ejs
+++ b/views/partials/Modal.ejs
@@ -17,7 +17,7 @@
 </style>
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <form action="" id="modalForm">
+        <form id="modalForm">
             <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalTitle">Add Employee</h5>
