--- a/views/partials/bodies/Holidays-editbody.ejs
+++ b/views/partials/bodies/Holidays-editbody.ejs
@@ -40,7 +40,7 @@
     
     <div class="mb-0">
         <label for="id">Pre-requisite Date:</label>
-        <input required type="date" placeholder="Pre-requisite date" name="predate" id="" class="sideContainerDate inputModal" value="<%=moment(holiday.preDate).format('YYYY-MM-DD')%>">
+        <input required type="date" placeholder="Pre-requisite date" name="preDate" id="" class="sideContainerDate inputModal" value="<%=moment(holiday.preDate).format('YYYY-MM-DD')%>">
         <p class="text-center text-danger from-error error"></p>
     </div>
     <div class="mb-0">
