--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -26,7 +26,20 @@
                 <input type="password" class="form-control" name='password' id="exampleInputPassword1" placeholder="Password">
                 <p class="text-center text-danger password-error error"></p>
             </div>
-
+            <div class="d-flex align-items-center gap-1 mb-3 mx-2 justify-content-between">
+                <div class="d-flex gap-1">
+                    <div class="d-flex align-items-center">
+                        <input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" data-v-26652ec2="">
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <label for='remember'class="">Remember me</label>
+                    </div>
+                </div>
+                
+                <div class="d-flex justifiy-content-end w-max">
+                    <a href="#">Forgot Password?</a>
+                </div>
+            </div>
             <button type="submit" class="btn btn-primary">SIGN IN</button>
         </form>
 
