--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -156,6 +156,11 @@ input, .form-control, input:focus, .form-control:focus{
 .sideContainer form h1{
     margin: 20px 0 20px 20px;
 }
+
+.sideContainer form label{
+    padding-left: .75em;
+    padding-bottom: .25em;
+}
 .sideContainer input, .sideContainer textarea{
     border-radius: 0;
 }
