update: front end add employee form, employee model revision

--- a/views/timeAttendance.ejs
+++ b/views/timeAttendance.ejs
@@ -23,10 +23,11 @@
                 </div>
             </div>
             <div class="infoContainer">
-                
+                <label for="" class="labelName">Name</label>
                 <div class="name">
                     <label for="" class="labelName">BFAR EMS</label>
                 </div>
+                <label for="" class="labelName">Employee ID</label>
                 <div class="id">
                     <label for="" class="labelId">BFAR EMS</label>
                 </div>
