--- a/views/addEmployee.ejs
+++ b/views/addEmployee.ejs
@@ -94,6 +94,10 @@
                     </div>
                     <div class="cardForm__inputDiv d-flex">
                         <div class="inputDiv1__input">
+                            <label for="homeadd"> Home Address</label>
+                            <input type="text" name="home_address" placeholder="Home Address">
+                        </div>
+                        <div class="inputDiv1__input">
                             <label for="age"> Age</label>
                             <input type="number" name="age" placeholder="Age">
                         </div>
@@ -139,6 +143,10 @@
                         <div class="inputDiv1__input">
                             <label for="companyloc"> Company Location</label>
                             <input type="text" name="company_location" placeholder="Company Location">
+                        </div>
+                        <div class="inputDiv1__input">
+                            <label for="companyadd"> Company Address</label>
+                            <input type="text" name="company_address" placeholder="Company Address">
                         </div>
                         <div class="inputDiv1__input">
                             <label for="designation"> Job Title/Designation</label>
