--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -28,7 +28,7 @@
 
     
     <div class="d-flex filterContainer rounded-1 gap-3">
-        <button id="btnAdd" type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal" onclick="modal('empAddNew')">Add new</button>
+        <a id="btnAdd" href="/admin/employees/new" class="btn btn-primary">Add new</a>
     </div>
     <%-include('partials/Modal') %> 
     
@@ -54,7 +54,7 @@
                         <td><%=user.designation%></td>
                         <td><%=user.employment_type%></td>
                         <td>
-                            <a href="#"> View Details </a>
+                            <a href="/admin/employees/view/<%=user._id%>" target="_blank"> View Details </a>
                         </td>
                     </tr>
                 <%}); %>
