--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -54,7 +54,8 @@
                         <td><%=user.designation%></td>
                         <td><%=user.employment_type%></td>
                         <td>
-                            <a href="/admin/employees/view/<%=user._id%>" target="_blank"> View Details </a>
+                            <a href="/admin/employees/view/<%=user._id%>" target="_blank">View Details</a>
+                            <a href="/admin/employees/view/<%=user._id%>" target="_blank">Edit</a>
                         </td>
                     </tr>
                 <%}); %>
